--- a/DemoGame2025.vcxproj.filters
+++ b/DemoGame2025.vcxproj.filters
@@ -111,6 +111,15 @@
     <ClCompile Include="particleemitter.cpp">
       <Filter>Engine\GameObjects</Filter>
     </ClCompile>
+    <ClCompile Include="entity.cpp">
+      <Filter>Engine\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="player.cpp">
+      <Filter>Engine\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="scenetest.cpp">
+      <Filter>Engine\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h">
@@ -188,9 +197,6 @@
     <ClInclude Include="SceneBouncingBalls.h">
       <Filter>Engine\Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="SceneBallGame.h">
-      <Filter>Engine\Scenes</Filter>
-    </ClInclude>
     <ClInclude Include="Vector2.h">
       <Filter>Engine\Math Utils</Filter>
     </ClInclude>
@@ -202,6 +208,12 @@
     </ClInclude>
     <ClInclude Include="LogManager.h">
       <Filter>Engine\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Engine\GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneTest.h">
+      <Filter>Engine\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
