--- a/DemoGame2025.vcxproj
+++ b/DemoGame2025.vcxproj
@@ -181,7 +181,7 @@
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="VertexArray.cpp" />
-    <ClCompile Include="xboxcontroller.cpp" />
+    <ClCompile Include="XboxController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimatedSprite.h" />
