--- a/DemoGame2025.vcxproj
+++ b/DemoGame2025.vcxproj
@@ -215,6 +215,7 @@
     <ClInclude Include="PlayerHUD.h" />
     <ClInclude Include="PlayerStats.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneAbyssWalker.h" />
     <ClInclude Include="SceneSplashScreenAUT.h" />
@@ -235,6 +236,9 @@
   <ItemGroup>
     <None Include="sprite.frag" />
     <None Include="sprite.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="DemoGame2025.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
